# allok

./: .gitignore  CMakeLists.txt  README.md
example/: example.c
include/: allok.h
src/: allok.c
